Bug 1099298 - Add the pres shell resolution to the container layer parameters in nsDisplaySubDocument::ComputeFrameMetrics(). r=tn